--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+<script src="./intro_component.jsx" type="text/babel"></script>
 <script src="./app.jsx" type="text/babel"></script>
 
 <div id="glory-to-rome-container"></div>
