--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
+<script src="./game_pending_component.jsx" type="text/babel"></script>
 <script src="./intro_component.jsx" type="text/babel"></script>
 <script src="./app.jsx" type="text/babel"></script>
 
