--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.3.1/react-router-dom.js" crossorigin></script>
 
 <script src="./game_pending_component.jsx" type="text/babel"></script>
 <script src="./intro_component.jsx" type="text/babel"></script>
