--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,8 @@
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.3.1/react-router-dom.js" crossorigin></script>
 
-<script src="./game_pending_component.jsx" type="text/babel"></script>
-<script src="./intro_component.jsx" type="text/babel"></script>
-<script src="./app.jsx" type="text/babel"></script>
+<script src="/game_pending_component.jsx" type="text/babel"></script>
+<script src="/intro_component.jsx" type="text/babel"></script>
+<script src="/app.jsx" type="text/babel"></script>
 
 <div id="glory-to-rome-container"></div>
