--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,7 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
-<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.3.1/react-router-dom.js" crossorigin></script>
-
-<script src="/game_pending_component.jsx" type="text/babel"></script>
-<script src="/intro_component.jsx" type="text/babel"></script>
-<script src="/app.jsx" type="text/babel"></script>
 
 <div id="glory-to-rome-container"></div>
+
+<script src="/main.js"></script>
